# Camera

./: .gitignore  CMakeLists.txt  README.md  install_opengl.sh  main.cpp  xyzCameraV3.sln
src/Apps/: main.cpp  model_load.cpp  test.cpp
src/GLCamera/: GLCamera.cpp  GLCamera.h
src/Geometry/: Geometry.h
src/Shaders/: coordinate.fs  coordinate.vs  vertex.vs
src/Tools/: mesh.h  model.h  shader_m.h  shader_s.h
xyzCameraV3/: GLCamera.cpp  GLCamera.hpp  Mesh.cpp  Mesh.hpp  main.cpp  xyzCameraV3.vcxproj  xyzCameraV3.vcxproj.filters
